Fixed jumpy background when switching mode - had to hide overflow on header (due to rotated text) and char-table-container

--- a/style.css
+++ b/style.css
@@ -19,11 +19,27 @@ body {
 
 h1 {
   font-family: "Open Sans", sans-serif;
+  font-size: 3rem;
+  margin: 0;
 }
 
 h2 h3 {
   font-family: "Nunito", sans-serif;
   font-weight: bolder;
+}
+
+a {
+  font-family: "Nunito", sans-serif;
+  font-weight: bolder;
+  text-decoration: none;
+  color: var(--light-yellow);
+  filter: drop-shadow(1px 1px 1px black);
+  transition: 0.3s;
+}
+
+a:hover {
+  font-size: 1.6rem;
+  color: var(--light-green);
 }
 
 button {
@@ -58,11 +74,13 @@ button:active {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
+  background-origin: border-box;
   position: absolute;
   width: 100%;
   height: 100%;
   z-index: -1;
   overflow: hidden;
+  filter: blur(2px);
 }
 
 /*----------- Page grid styling /*-----------*/
@@ -71,17 +89,20 @@ button:active {
   grid-area: header;
   padding: 5px 0;
   text-align: center;
+  padding-top: 20px;
   background-image: url("images/header_background.svg");
   background-size: 100% 600px;
   background-repeat: no-repeat;
-  position: relative;
+  /* position: relative; */
   filter: drop-shadow(0px 3px 5px black);
+  overflow: hidden;
 }
 
 .page-header h1 {
   color: var(--light-yellow);
   transform: rotate(-3deg);
-  filter: drop-shadow(2px 2px 1px black);
+  filter: drop-shadow(0px 0px 2px black);
+  -webkit-text-stroke: 1px black;
 }
 
 .page-main {
@@ -89,7 +110,6 @@ button:active {
 }
 .page-footer {
   grid-area: footer;
-  padding: 10px 0;
   text-align: center;
   margin-top: 2rem;
   background-image: url("images/footer_background.svg");
@@ -99,10 +119,15 @@ button:active {
   filter: drop-shadow(0px -3px 5px black);
 }
 
+.page-footer h2 {
+  margin-top: 2.5rem;
+  bottom: 0;
+}
+
 .page-grid {
-  /* display: grid; */
+  display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 100px 1fr 100px;
+  grid-template-rows: 100px 1fr 120px;
   grid-template-areas:
     "header"
     "main"
@@ -191,10 +216,14 @@ button:active {
 }
 
 /*----------- Character table styling /*-----------*/
-table {
+.char-table-container {
+  margin-top: 1rem;
   margin-left: 2.5rem;
   margin-right: 2.5rem;
-  margin-top: 1rem;
+
+}
+
+table {
   text-align: center;
   border-collapse: separate;
   border-spacing: 0;
@@ -305,7 +334,7 @@ dialog img {
 
 .fade-in {
   animation-name: fade-in;
-  animation-duration: 0.1s;
+  animation-duration: 0.2s;
   animation-iteration-count: 1;
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.3, 1.27);
   animation-fill-mode: forwards;
@@ -315,11 +344,11 @@ dialog img {
 @keyframes fade-in {
   0% {
     opacity: 0%;
-    transform: scale(97%);
+    transform: scale(90%) rotate(-5deg);
   }
   100% {
     opacity: 100%;
-    transform: scale(100%);
+    transform: scale(100%) rotate(0deg);
   }
 }
 
@@ -335,11 +364,11 @@ dialog img {
 @keyframes fade-out {
   0% {
     opacity: 100%;
-    transform: scale(100%);
+    transform: scale(100%) rotate(0deg);
   }
   100% {
     opacity: 0%;
-    transform: scale(97%);
+    transform: scale(90%) rotate(5deg);
   }
 }
 
